ilivalidator 1.6.0 (2017-10-20)
-----------------------------
- added createReader() template method to high level API

ilivalidator 1.5.0 (2017-10-20)
-----------------------------
- added: --allowItfAreaHoles (only ITF)
- iox-ili-1.19.8
- ili2c-4.7.4

ilivalidator 1.4.0 (2017-08-24)
-----------------------------
- changed default --modeldir to %ITF_DIR;http://models.interlis.ch/;%JAR_DIR/ilimodels
- set value of %JAR_DIR to folder of ilivalidator.jar
- added: new option to assume all objects are known to the validator
- added: iox-ili 1.19.6 (2017-08-24)
- fixed TranslateToOrigin: failed if dest attribute name equals source attrname
- fixed TranslateToTranslation: failed if dest attribute name equals source attrname
- added CsvReader
- added GmlReader
- added Xtf24Reader
- added addGenericReader

ilivalidator 1.3.0 (2017-06-17)
-----------------------------
- added: support multiple input files
- added: --skipPolygonBuilding (only ITF)
- added: --multiplicityOff
- fixed: wrong error message "doItfOidPerTable!=false" / save only persistent settings to ${HOME}/.ilivalidator
- iox-ili-1.19.0 (2017-06-17)
- ili2c-4.7.3

ilivalidator 1.2.1 (2017-04-20)
-----------------------------
- iox-ili 1.18.1 (2017-04-20)
- validator: fixed implementation of uniqueness constraint

ilivalidator 1.2.0 (2017-04-19)
-----------------------------
- iox-ili 1.18.0 (2017-04-19)
- keep/save last directory of file selector
- iox-ili: fixed: missing custom functions should not report an error
- validator: added: implement UNIQUE (LOCAL)
- validator: added: implement UNIQUE WHERE expression

ilivalidator 1.1.0 (2017-04-05)
-----------------------------
- iox-ili 1.16.0-master (2017-04-05)
- validator: fixed: switching constraint check off
- validator: fixed: role EXTERNAL handling in cardinality and reference
- validator: optimized: constraint error messages
- validator: added: new option --forceTypeValidation
- validator: added: new option --disableAreaValidation
