@@ -1,5 +1,7 @@
 #Fri, 20 Oct 2017 18:10:10 +0200
 #Wed Oct 14 17:02:32 CEST 2009
+version=1.0.6-SNAPSHOT
+versionCommit=dummy
 versionMicro=0
 versionMinor=6
 versionDate=20171020
